--- a/form.html
+++ b/form.html
@@ -14,12 +14,12 @@
   <div class="jumbotron">
     <form>
       <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <label for="username">Username</label>
+        <input type="username" class="form-control" id="username" placeholder="Enter your username">
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Password">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
